updates for school projects

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
-*{
+* {
     font-family: helvetica;
-    color: #1F271B;
     line-height: 1.618em;
     box-sizing: border-box;
     margin: 0;
@@ -15,75 +14,62 @@
 
 
 }
-body
-{
+
+body {
 background-color: #F3FCF0;
+margin-bottom: 1em;
 }
 
-h1
-{
+h1 {
     font-weight: bolder;
     color: #F3FCF0;
 }
-h2
-{
+
+h2 {
     color: #ffd23f;
 }
-h3
-{
+
+h3 {
     color: #ffd23f;
 }
     
 
-#headerBackground
-{
+#headerBackground {
     /* background-color: #1F271B; */
     background-image:url("/Images/banner2.pdf");
     background-size: 100%;
 }
-@media only screen and (max-width:600){#headerBackground{background-color: #1F271B;}};
+
+/* @media only screen and (max-width:800){#headerBackground{background-color: #1F271B}}; */
 
 
-
-hr
-{
-font-size: 5px;
-}
-
-html
-{
+html {
 font-size: 16px;
 }
 
 header,
-main
-{
+main {
     margin: 0 auto;
     max-width: 800px;
 }
-footer
-{
-margin: 0 auto;
-}
 
-header
-{
+
+
+header {
     padding: 5em 0em;
     /* background-color: #ffd23f; */
 }
 
-header h1 
-{
+header h1 {
     font-size: 3em;
 }
-header span 
-{
+
+header span {
     font-size: 1.5em;
     color:#ffd23f;
 }
 
-nav
-{
+nav {
 position: fixed;
 top: 0;
 left: 0;
@@ -97,108 +83,263 @@ background: #1F271B;
 opacity: 95%;
 }
 
-nav a 
-{
+nav a {
 padding: .5em 2em;
 color: #F3FCF0;
 text-decoration: none;
 }
-nav a:hover
-{
+
+nav a:hover {
     /* background: #540D6E; */
     color: #ffd23f;
 }
 
-#about
-{
+#about {
 display:flex;
 flex-direction: row;
-
-
 }
-#aboutMeInfo
-{
+
+#aboutMeInfo {
 width: 50%;
 text-align: justify;
 text-justify: inter-word;
+color:#1F271B;
 }
-#aboutMePic
-{
+
+#aboutMePic {
 width: 50%;
 text-align: center;
 background-color: #ffd23f;
-border-radius: 25%;
+border-radius: 85%;
 margin-left: 1em;
 }
 
-#cultLeader
-{
-    border-radius: 25%;
+#cultLeader {
+    border: radius 85%;
+    max-height: 400px;
 }
 
-section 
-{
+section {
 margin: 1em 0;
-padding-top: 3em;
-min-height: 20em;
+padding-top: 2em;
 }
 
-section > p 
-{
+section > p {
 margin: 1em 0;
 }
 
-section ul
-{
+section ul{
 padding-left: 1.5em;
+list-style-type: none;
 }
 
-#projects
-{
-display: grid;
-grid-template-columns: repeat(3, 1fr);
-grid-template-rows: auto;
-grid-column-gap: 1em;
-color: #F3FCF0;
+  .document-center {
+    position:relative;
+    width: 100%;
+    height: 100%;
+  
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  
+  .carousel-container {
+    max-width: 800px;
+    width: 100%;
+  }
+  
+  .carousel {
+    /* position: absolute; */
+    width: 100%;
+    /*Width of image is 980px. Height is 570px.*/
+    padding-top: calc(500 / 750 * 100%);
+    overflow: hidden;
+  }
+  
+  .carousel-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .left-arrow {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 147px;
+    cursor: pointer;
+  }
+  
+  .left-arrow:hover {
+    background: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+  }
+  
+  .left-arrow:hover .chevron,
+  .right-arrow:hover .chevron {
+    border-color: #ffd23f;
+  }
+  
+  .right-arrow {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 147px;
+    cursor: pointer;
+  }
+  
+  .right-arrow:hover {
+    background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+  }
+  
+  .chevron {
+    width: 25px;
+    height: 25px;
+    border: solid rgba(255, 255, 255, 0.5);
+    border-width: 10px 10px 0 0;
+  }
+  
+  .chevron.right {
+    transform: rotate(45deg);
+  }
+  
+  .chevron.left {
+    transform: rotate(-135deg);
+  }
+  
+  .circle-container {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 45px;
+  }
+  
+  .circle {
+    border: 1px solid white;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+  }
+  
+  .circle-fill {
+    background-color: white;
+  }
+  
+  .text-container {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center, bottom;
+    bottom: 10px;
+    left: 0;
+    width: 100%;
+    color: white;
+    text-shadow: 1px 1px black;
+    text-align: center;
+    background-color:black;
+    opacity: 70%;
+    width: 100%;
+    
+  }
+  
+  /* .text-container p:nth-child(1) {
+    margin: 10px 100px;
+    font-size: 1.5em;
+  } */
+  
+  /* .text-container p:nth-child(2) {
+    margin: 10px 100px 20px 100px;
+  } */
+  
+  .carousel-screen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  /* Animations */
+  @keyframes toRight {
+    0% {
+      left: 0;
+    }
+    100% {
+      left: 100%;
+    }
+  }
+  
+  @keyframes toLeft {
+    0% {
+      left: 0;
+    }
+    100% {
+      left: -100%;
+    }
+  }
+  
+  @keyframes comeRight {
+    0% {
+      left: 100%;
+    }
+    100% {
+      left: 0;
+    }
+  }
+  
+  @keyframes comeLeft {
+    0% {
+      left: -100%;
+    }
+    100% {
+      left: 0;
+    }
+  }
+
+#contactMe{
+display:flex;
+flex-direction: row;
 }
 
-#projects article
-{
-    background: #540D6E;
-    padding: 1em;
+#contactInfo{
+width: 50%;
 }
 
-#projects article img
-{
-width: 100%;
-border: 1px solid #1F271B; 
+#contactLinks{
+width: 50%;
 }
-.productDescription
-{
+
+.contactInfo{
     color: #F3FCF0;
 }
 
-#contactMe
-{
-display:flex;
-flex-direction: row;
-
-}
-#contactInfo
-{
-width: 50%;
-}
-#contactLinks
-{
-width: 50%;
+.contactInfo:hover{
+    color:#ffd23f;
 }
 
-footer
-{
-margin-top: 2em;
-margin-bottom: 0em;
+
+footer{
 background: #1F271B; 
 color: #F3FCF0;
-padding: 1em 0;
+padding: 2em 0;
 text-align: center;
+margin: 1em auto;
+position: absolute;
+width: 100%;
 }
